# raalisence

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.python  Dockerfile.python.prod  README.md  README_Docker.md  README_python.md  config.example.yaml  debug_auth.py  debug_server.py  docker-compose.python.yaml  docker-compose.yaml  go.mod  pyproject.toml  pytest.ini  requirements.txt  security_audit.md  sqlc.yaml  test_auth.py
cmd/raalisence/: main.go
deploy/gke/: 00-configmap-migrations.yaml  01-pvc.yaml  02-secret.sample.yaml  02-secret.yaml  03-deployment.yaml  04-service.yaml  05-ingress-https.yaml  06-managed-cert.yaml  07-frontend-config.yaml  README.md
internal/config/: config.go
internal/crypto/: sign.go
internal/handlers/: health.go  lisence.go  lisence_test.go
internal/middleware/: admin_auth.go  logging.go  ratelimit.go  requestid.go
internal/server/: server.go
python_raalisence/: __init__.py  main.py  server.py
python_raalisence/config/: config.py
scripts/: build-docker-python.ps1  build-docker-python.sh  dev_db_down.bat  dev_db_down.ps1  dev_db_down.sh  dev_db_up.bat  dev_db_up.ps1  dev_db_up.sh  dev_sqlite_up.bat  dev_sqlite_up.ps1  dev_sqlite_up.sh  gen.bat  gen.ps1  gen.py  gen.sh  gen_keys.bat  gen_keys.ps1  gen_keys.py  gen_keys.sh  hash-admin-key.go  run.bat  run.ps1  run.sh  setup.bat  setup.ps1  setup.py  test.bat  test.ps1  test.sh
static/: admin.html
tests/: conftest.py  test_config.py  test_crypto.py  test_database.py  test_handlers.py  test_integration.py  test_middleware.py  test_scripts.py  test_server.py
(+14 files in other folders)
